use List.of() for single item lists